[tool.poetry]
name = "dcfdataservice"
version = "1.7.0"
description = "Collection of jobs to replicate data from GDC data center to AWS and Google Buckets"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.8.2"
requests = "2.27.1"
boto3 = "^1.9.111"
retry = "^0.9.2"
google-cloud = "0.34.0"
httplib2 = "^0.20.0"
pyparsing = "^2.4.2"
google-resumable-media = "^2.7.2"
google-auth = "^2.35.0"
google-cloud-storage = "^2.18.2"
google-cloud-core = "^2.4.1"
apache-beam = {extras = ["gcp"], version = "^2.59.0"}
pyyaml = "^5.4"
pyarrow = "^3.0.0"
setuptools = "41.4.0"
slack-sdk = "3.19.3"
cdislogging = "1.1.1"
cdiserrors = "1.0.0"
indexclient = "2.3.1"



[tool.poetry.group.dev.dependencies]
mock = "1.0.1"
pytest-cov = "2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
